src/styles.scss
/* ... */
#info,
#versions,
#dockerfile,
#descriptor,
#sharing {
  border-right: solid 1px #cfd1d7;
}

#info a,
#versions a,
#dockerfile a,
#descriptor a,
#sharing a {
  font-weight: bold;
}

div.tabs > div > a {
  text-decoration: none;
}

div.tabs > div > div {
  text-align: left;
  padding: 25px;
  line-height: 2;
}

div.tabs > div:not(:target) {
  background: #fff;
}

div.tabs > div:target,
:target #info,
div.tabs > div:hover {
  background-color: #7987aa;
}

div.tabs > div:target > a,
:target #info > a,
div.tabs > div:hover > a {
  color: #fff;
}

div.tabs > div > div {
  background-color: #ffffff;
  z-index: -2;
  left: 0;
  top: 30px;
  bottom: 0;
  right: 0;
  overflow: auto;
}

div.tabs > div:not(:target) > div {
  position: absolute;
}

div.tabs > div:target > div,
:target #info > div,
#info > div {
  position: absolute;
  z-index: -1;
}

// Replace with bootstrap4 ml-something
.hori-offset-12 {
  margin-left: 12px;
}

/* Dockstore Grid */

.row.ds-grid-footer > div {
  margin-top: -6px;
}

.row.ds-grid-footer nav {
  margin-top: -25px;
}

// This currently breaks the new ngx-tabset
// .nav-item {
//   height:50px;
// }

.fullscreen {
  z-index: 100000;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  padding: 10px;
  margin: 0px;
}

// Currently only used by the DAG tooltip, consider using this for any non-material tooltips
.bootstrap-tooltip-z-index {
  z-index: 1070;
}

// Currently only used by the DAG tooltip, probably pretty unique and should be moved to the DAG scss
.opaq {
  opacity: 0.825;
}

.test_parameter_input {
  width: 90%;
  float: left;
}

html,
body {
  height: 100%;
}

/* This is for dropdown anchor to have a mouse pointer without redirecting to a different page */
.dropdown-menu li a {
  cursor: pointer;
}
/* End Temporary Styles - Need to Refactor Later */
.changePage {
  display: inline-block;
  padding: 5px 14px;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 15px;
  color: #487980;
  &:hover {
    background-color: #f2f2f2;
  }
}

.nav-tabs.nav-justified > li > a {
  margin: 0px !important;
}

// This is like the bootstrap 4 utility class, remove once we have the real one
.align-middle {
  vertical-align: middle;
}

// Reduces the width of the sidebar tab by half (160px default). Can't seem to move this to the sidebar scss for some reason
app-sidebar-accordion
  .mat-accordion
  > .mat-expansion-panel
  > .mat-expansion-panel-content
  > .mat-expansion-panel-body
  > .mat-tab-group
  > .mat-tab-header
  > .mat-tab-label-container
  > .mat-tab-list
  > .mat-tab-labels {
  .mat-tab-label[role^='tab'] {
    min-width: 80px;
  }
}

.tool-tab-group.mat-primary .mat-ink-bar {
  background: #29b6f6 !important;
}

.workflow-tab-group.mat-primary .mat-ink-bar {
  background: #26bfa5 !important;
}

.service-tab-group.mat-primary .mat-ink-bar {
  background: #ff6c44 !important;
}

.purple-tab-group.mat-primary .mat-ink-bar {
  background: #3f51b5 !important;
}

// Automatically used by Angular Material
.mat-tab-label:hover {
  color: black;
  opacity: 0.7;
}

.container-label-tag {
  background: #d0effd !important;
  text-decoration: none !important;
  border-radius: 1rem !important;
  font-size: 12px !important;
  padding: 0 0.6rem !important;
}

.workflow-label-tag {
  background: #d2fbf0 !important;
  text-decoration: none !important;
  border-radius: 1rem !important;
  font-size: 12px !important;
  padding: 0 0.6rem !important;
}

.gray-label-tag {
  background: mat.get-color-from-palette($dockstore-app-gray, lighter) !important;
  text-decoration: none !important;
  border-radius: 1rem !important;
  font-size: 12px !important;
  padding: 0 0.6rem !important;
}
// Make the dropdown at least the size of the default material dropdown.
// Making the general width to grow to 50% of the parent width so that there's more room to display long file names
// TODO: Ideally this should stretch to the length of the longest dropdown option.
app-select.longer {
  min-width: 180px;
  width: 50%;
}

mat-icon.star-icon {
  font-size: 16px;
  height: 16px;
}

.ellipsis-overflow {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.notification-display p {
  text-align: center;
  display: inline-block;
}
//removes the 10px margin added to p element on markdown component
.markdown-remove-pmargin p {
  margin-bottom: 0px;
}

#workflow-path,
#tool-path {
  overflow-wrap: break-word;
}
.text-wrap {
  white-space: normal;
}

mat-tab-group.no-pagination {
  .mat-tab-header-pagination {
    display: none;
  }
}

//color from mat-card-subtitle
.subtitle {
  font-size: smaller;
  color: rgba(0, 0, 0, 0.54);
}

// Styling from design mockups
// These badges are not clickable, thus different from Material Design Chips
.nonclick-badge {
  display: inline-flex;
  border-radius: 8px;
  background-color: mat.get-color-from-palette($dockstore-app-gray, lighter);
  padding: 5px 8px;
  color: #151c3d;
  font-size: 1.3rem;
  font-weight: 500;
}

@media only screen and (max-width: 1200px) {
  .align-languages {
    flex-direction: column;
  }
}

.custom_copy_snack_bar {
  min-width: 0 !important;
  background-color: #5c5c5c !important;
}

.view-button {
  font-size: 12px !important;
  line-height: inherit !important;
}

hr {
  margin: 0.5rem 0;
  border: 1px solid mat.get-color-from-palette($dockstore-app-gray, lighter);
}

.orcid-id-logo {
  vertical-align: sub;
}

.small-org-logo {
  height: 50px;
  object-fit: scale-down;
}

.big-org-logo {
  max-height: 100px;
  max-width: 200px;
  margin-top: 1.5rem;
}

// To indicate success of an operation.
.accent-3-dark {
  color: #00bfa5;
}

// Following 4 items are for stepper/stepper-like dialogs
.accent-1-dark {
  color: mat.get-color-from-palette($dockstore-app-accent-1, darker);
}
.mat-flat-button.bg-accent-1-dark {
  background-color: mat.get-color-from-palette($dockstore-app-accent-1, darker);
  color: white;
}
/* ... */

